# nnfs

./: batching_example.py  class_03.py  class_05.py  class_06.py  class_06_softmax.py  class_07_cce.py  class_07_natural_logs.py  class_07_nn.py  class_10_derivatives.py  create_data.py  neuron_example.py  nn_template_01.py  no-calc-ml.py  object_version.py  package_versions.py  pyproject.toml  simple_output_layer.py  softmax_batches.py  softmax_numpy.py  spiral_test.py  two_layers.py  vertical_plot.py
